@@ -1,5 +1,5 @@
 /*
- * $Id: vchangepw.c,v 1.1.2.4 2006-11-26 18:55:52 tomcollins Exp $
+ * $Id: vchangepw.c,v 1.1.2.5 2006-11-26 19:10:58 tomcollins Exp $
  * Modified version of vpasswd created by Rolf Eike Beer, November 2003
  *
  * Usage Note: 
@@ -35,7 +35,7 @@
 
 int main(void)
 {
-	int i, bad;
+	int i;
 	struct vqpasswd *vpw = NULL;
 	char Email[MAX_BUFF];
 	char User[MAX_BUFF];
@@ -53,20 +53,19 @@ int main(void)
 
 	fputs("Please enter the email address: ", stdout);
 
-	bad = 0;
 	if (fgets(Email, sizeof(Email), stdin) == NULL) {
-		bad = 1;
+		puts("\n");
+		return 0;	// exit, no address entered
 	} else {
 		i = strlen(Email) - 1;
-		if (i < 0 || (Email[i] != '\n' && Email[i] != '\r'))
-			bad = 1;
-	}
-	if (bad) {
-		puts("Error: email address too long");
-		return 3;
+		if (i >= 0 && (Email[i] == '\n' || Email[i] == '\r')) {
+			Email[i] = '\0';
+		} else {
+			puts("\nError: email address too long");
+			return 3;
+		}
 	}
 
-	Email[i] = '\0';
 	puts(Email);
 
 	if ( (i = parse_email( Email, User, Domain, MAX_BUFF)) != 0 ) {
